# TCT-75-MosquitoPay-PaywithShimmer

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
mosquitopay-shimmer-backend/: .env.example  index.js  nodemon.json  package.json  sample.shop.json
mosquitopay-shimmer-backend/templates/MP.Woocommerce.Template/: LICENSE  README.md  class-wc-gateway-mosquitopay.php  mosquitopay-commerce.php  readme.txt  sync-plugin-repo.sh
mosquitopay-shimmer-backend/templates/MP.Woocommerce.Template/includes/: class-mosquitopay-api-handler.php
mosquitopay-shimmer-charge-package/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  package.json
mosquitopay-shimmer-charge-package/__tests__/: app.test.js
mosquitopay-shimmer-charge-package/src/: main.js
mosquitopay-shimmer-client/: .env.example  .gitignore  Cargo.toml  package.json
mosquitopay-shimmer-client/src/: main.rs
mosquitopay-shimmer-frontend/: .env.example  package.json  tsconfig.json
mosquitopay-shimmer-frontend/src/: App.jsx  main.jsx
mosquitopay-shimmer-frontend/src/routes/: download.jsx  pay.jsx  register.jsx
